added terminal app. improved about me and blog entries.

--- a/about.html
+++ b/about.html
@@ -25,19 +25,20 @@
     <main>
         <h1 class="navheading">About Me</h1>
     <section class="aboutmepara">
-        <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and a hard worker. With a bachelor degree in marketing and a diploma in visual design, he now plans to use his current skillset, along with his recent education and experience in full stack web development, to embark on a new career path.</p>
-        <p>Whatever it is that Tom puts his mind to he achieves, because he is hard working and refuses to give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. Tom is now looking to turn this passion and commitment into a career where he can grow professionally, while developing new innovative applications that benefit humanity and the earth.</p>  
+        <p>Tom Martin is an enthusiastic, positive, and passionate individual who appreciates communication and collaboration towards shared objectives with like-minded individuals. He possesses a keen eye for detail, is a logical thinker, and demonstrates strong work ethic. Readied with a bachelor's degree in marketing and a diploma in visual design, he is poised to leverage his existing skill set alongside his recent education and experience in full-stack web development to pursue a new career path.
+        </p>
+        <p>Whatever endeavour Tom sets his mind to, he accomplishes, fuelled by his strong work ethic and unwavering determination. He is inherently self-motivated and willing to go to great lengths to reach his objectives. Tom is currently seeking to channel this passion and dedication into a career that fosters professional growth while allowing him to create innovative applications that contribute positively to society and the environment.</p>  
     </secton>
     <section class="educationheading">
         <h2>Education</h2>
     </section>
     <section class="education">
         <ul >
-            <li><strong>Full-Stack Development Bootcamp and Higher Education Diploma of IT</strong> at <em>Coder Academy (AIT Sydney)</em></li>
-            <li><strong>Bachelor of Management (Marketing)</strong> at <em>The University of South Australia</em></li>
-            <li><strong>Meta Front-End Developer Professional Certificate</strong> at <em>Meta</em></li>
-            <li><strong>Graphic Design Bootcamp</strong> at <em>The Graphic Design School (Sydney)</em></li>
-            <li><strong>Diploma of Visual Design</strong> at <em>Adelaide College of the Arts</em></li>
+            <li><strong>Coder Academy Full-Stack Development Bootcamp and Higher Education Diploma of IT</strong> at the <em>Academy of Interactive Technology.</em></li>
+            <li><strong>Bachelor of Management (Marketing)</strong> at <em>The University of South Australia.</em></li>
+            <li><strong>Meta Front-End Developer Professional Certificate</strong> at <em>Meta.</em></li>
+            <li><strong>Graphic Design Bootcamp</strong> at <em>The Graphic Design School.</em></li>
+            <li><strong>Diploma of Visual Design</strong> at <em>Adelaide College of the Arts.</em></li>
         </ul>
     </secton>
     </main>
