--- a/gardening.html
+++ b/gardening.html
@@ -26,7 +26,7 @@
         <h1 class="navheading">Gardening</h1>
         <img class="blogimages" src="images/8DF8FE52-9FCD-4E09-AE97-1248414DCAB3.JPG" alt="Tom in the garden with his mum">
     <section class="aboutmepara">
-        <p>A love of gardening was influenced by my mother at an early age while growing up in the Adelaide Hills, where I always had my own vegetable garden. This has developed into a passion for Australian natives and organically grown fruit and vegetables - contributing to sustainability.</p>
+        <p>My love for gardening was nurtured by my mother during my formative years in the Adelaide Hills, where I tended to my own vegetable patch from an early age. Over time, this initial interest blossomed into a profound passion for cultivating Australian native plants and embracing sustainable, organic practices, particularly in growing fruits and vegetables. This commitment to sustainability continues to inspire my gardening journey.</p>
         <a class="button" href="blog.html">Return to blog</a> 
     </section>
     </main>
