--- a/musicproduction.html
+++ b/musicproduction.html
@@ -25,7 +25,7 @@
     <main>
         <h1 class="navheading">Music Production</h1>
         <section class="aboutmepara">
-            <p>From an early age, a strong love of most genres of music paved the way for over a decade long music production journey. During this time, I was fortunate enough to collaborate with some of my biggest inspirations and release music on a variety of my favourite local and international record labels.</p>
+            <p>From a young age, a profound passion for music has guided my journey into electronic music production, spanning over a decade. Throughout this time, I've had the privilege of collaborating with inspirational artists, transcending geographical boundaries. In addition, I've had the opportunity to release my music on a diverse range of esteemed local and international record labels, each contributing to my growth as an artist.</p>
         </section>
         <section class="musicimages">
             <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="Picture of Volume 3 record" width="25%">
