--- a/projects.html
+++ b/projects.html
@@ -31,24 +31,25 @@
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>Build a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Website</a>
+                <p>* Hint you're on it.</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.21.11 am.png" alt="picture of terminal with python logo" width= "70%">
-                <p>Build a terminal application using Python and Flask.</p>
-                <a class="button">COMING SOON</a>
+                <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
+                <p>Build a terminal application using Python and Bash scripting.</p>
+                <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Application</a>
             </section>
             <section class="projects">
                 <h2>SQL Databases</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
-                <p>Build an SQL database system.</p>
-                <a class="button">COMING SOON</a>
+                <p>Build an SQL database system using PostgreSQL.</p>
+                <a class="button">Work in Progress</a>
             </section>
             <section class="projects">
-                <h2>CS Algorithms</h2>
+                <h2>CS Fundamentals</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
                 <p>CS algorithmn fundamentals and discrete mathematics.</p>
-                <a class="button">COMING SOON</a>
+                <a class="button">Work in Progress</a>
             </section>
             <section class="projects">
                 <h2>API Webserver</h2>
