--- a/recordlabel.html
+++ b/recordlabel.html
@@ -25,7 +25,7 @@
     <main>
         <h1 class="navheading">Record Label</h1>
         <section class="aboutmepara">
-            <p>After producing music for several years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label, with the help of two europe based distrobution companies, which has now seen the label release vinyl records by a handfull of favourite local and international artists.</p>
+            <p>After spending several years immersed in music production, a desire for full control over the creative process from start to finish was realised. This drive inspired me to launch my own record label, a venture made possible with the support of two European-based distribution companies. Through this endeavour, my label has proudly released vinyl records by a select group of adored local and international artists, playing a significant role in my musical journey to date.</p>
         </section>
         <section class="musicimages">
             <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="picture of vol 3 record" width="25%">
