--- a/skills.html
+++ b/skills.html
@@ -32,59 +32,61 @@
                     <li>Python</ls>
                     <li>Flask</ls>
                     <li>Javascript</li>
-                    <li>Bootstrap</li>
                     <li>React</li>
+                    <li>Bootstrap</li>
                     <li>NodeJS</li>
                     <li>MongoDB</li>
-                    <li>SQL Databases</li>
-                    <li>Git Hub</li>
+                    <li>APIs</li>
+                    <li>SQL</li>
+                    <li>PostgreSQL</li>
+                    <li>Git & Git Hub</li>
                     <li>Scrum & Kanban</li>
                 </ul>
             </section>
             <section class="skillbox">
-                    <ul class="skilllist">
-                        <h2 class="itlist">Graphic Design</h2>
-                        <li>Adobe Photoshop</li>
-                        <li>Adobe Illustrator</ls>
-                        <li>Adobe XD</ls>
-                        <li>Figma</li>
-                        <li>UI/UX Design</li>
-                        <li>Prototyping</li>
-                        <li>Wireframes</li>
-                        <li>Frame Annimations</li>
-                    </ul>
-                </section>
-                <section class="skillbox">
-                    <ul class="skilllist">
-                        <h2 class="itlist">Marketing</h2>
-                        <li>Digital Marketing</li>
-                        <li>Google Adds</li>
-                        <li>Social Media Management</li>
-                        <li>Brand Identity</li>
-                        <li>Content Creation</li>
-                    </ul>
-                </section>
-                <section class="skillbox">
-                    <ul class="skilllist">
-                        <h2 class="itlist">Soft Skills</h2>
-                        <li>Creative Thinker</li>
-                        <li>Logical Thinker</li>
-                        <li>Communication</li>
-                        <li>Rapport Building</li>
-                        <li>Hard Working</li>
-                        <li>Passionate</li>
-                        <li>Enthusiastic</li>
-                        <li>Self Motivated</li>
-                        <li>Decision Maker</li>
-                        <li>Honest</li>
-                        <li>Respectful</li>
-                    </ul>
-                </section>
+                <ul class="skilllist">
+                    <h2 class="itlist">Graphic Design</h2>
+                    <li>Adobe Photoshop</li>
+                    <li>Adobe Illustrator</ls>
+                    <li>Adobe XD</ls>
+                    <li>Figma</li>
+                    <li>UI/UX Design</li>
+                    <li>Prototyping</li>
+                    <li>Wireframes</li>
+                    <li>Frame Annimations</li>
+                </ul>
+            </section>
+            <section class="skillbox">
+                <ul class="skilllist">
+                    <h2 class="itlist">Marketing</h2>
+                    <li>Digital Marketing</li>
+                    <li>Google Adds</li>
+                    <li>Social Media Management</li>
+                    <li>Brand Identity</li>
+                    <li>Content Creation</li>
+                </ul>
+            </section>
+            <section class="skillbox">
+                <ul class="skilllist">
+                    <h2 class="itlist">Soft Skills</h2>
+                    <li>Creative Thinker</li>
+                    <li>Logical Thinker</li>
+                    <li>Communication</li>
+                    <li>Rapport Building</li>
+                    <li>Hard Working</li>
+                    <li>Passionate</li>
+                    <li>Enthusiastic</li>
+                    <li>Self Motivated</li>
+                    <li>Decision Maker</li>
+                    <li>Honest</li>
+                    <li>Respectful</li>
+                </ul>
+            </section>
         </section>
-    <section class="resume">
+    <!-- <section class="resume">
     <a class="button" href="images/Tom Martin.pdf" 
     target="blank">View Resume Here</a>
-    </section>
+    </section> -->
     </main>
     <footer id="footer">
         <p>
