--- a/design.html
+++ b/design.html
@@ -32,11 +32,11 @@
         <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Pixture of Lazy Days winery mock logo" width="20%">
         <p class="description"><em>Mock logo design</em></p>
     <section class="aboutmepara">
-        <p>Design has always been a big part of my life - starting when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - including my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
+        <p>Design has been an integral part of my life since childhood, when my aspirations centered around becoming an architect, spending hours crafting Lego structures and cardboard box arcades and hotels for amusement. This early fascination evolved into a pursuit of product and furniture design, culminating in my year 12 final project—a sneaker design. Since then, I've actively engaged in collaborative projects with various designers, spanning event posters, record designs, clothing, and beyond, further fueling my love for the creative process.
         </p>
-            <p>As Covid hit, and I moved back to my hometown of Adelaide, it was time to learn the tools needed to turn my own creative ideas into fruition. This was achieved by studying an intensive design foundations course at The Graphic Design School in Sydney, then a Diploma of Visual Design at The Adelaide College of the Arts. 
+            <p>As the COVID-19 pandemic unfolded, prompting my return to my hometown of Adelaide, I seized the opportunity to equip myself with the necessary skills to bring my creative visions to life. This journey began with an intensive design foundations course at The Graphic Design School in Sydney, followed by pursuing a Diploma of Visual Design at The Adelaide College of the Arts. 
             </p>
-            <p>I am now very much looking forward to implementing my design knowledge and skills into building interactive websites and applications.</p>
+            <p>I am eagerly anticipating the opportunity to apply my extensive design knowledge and skills towards creating immersive and user-friendly websites and applications.</p>
         <a class="button" href="blog.html">Return to blog</a> 
     </section>
     </main>
