removed published date

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
             <h3>Music Production</h3>
             <a href="musicproduction.html"><img class="blogimg" src="images/Ahora art.jpeg" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-            From a young age, a profound passion for music has guided my journey into music production, spanning over a decade. Throughout this time, I've had the privilege of collaborating with esteemed artists who have served as lifelong inspirations, transcending geographical boundaries. Moreover, I've had the opportunity to release my music on a diverse range of esteemed local and international record labels, each contributing to my growth as an artist.  -->
+            <!-- From an early age, a strong love of most genres of music paved the way for over a decade long journey into music production. During this time, I was fortunate enough to collaborate with some life-long inspirations from around the globe, and release music on a variety of my favourite local and international record labels.  -->
             </p>
             <!-- <p><em>Published 20th March '24</em></p> -->
             <a class="button" href="musicproduction.html">Read More</a>
@@ -67,7 +67,7 @@
             <p>
                 <!-- Since Covid struck, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent recipes, that I will definitely be making next season!     -->
             </p>
-            <!-- <p><em>Published 22th March '24</em></p> -->
+            <p><em>Published 22th March '24</em></p>
             <a class="button" href="cooking.html">Read More</a>
         </Section>
     </section>
