removed arpiring from front page

--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
             <p>
                 <!-- Since Covid struck, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent recipes, that I will definitely be making next season!     -->
             </p>
-            <p><em>Published 22th March '24</em></p>
+            <!-- <p><em>Published 22th March '24</em></p> -->
             <a class="button" href="cooking.html">Read More</a>
         </Section>
     </section>
