--- a/skills.html
+++ b/skills.html
@@ -35,12 +35,12 @@
                     <li>React</li>
                     <li>Bootstrap</li>
                     <li>NodeJS</li>
+                    <li>TypeScript</li>
                     <li>MongoDB</li>
-                    <li>APIs</li>
-                    <li>SQL</li>
+                    <li>RESTful APIs</li>
                     <li>PostgreSQL</li>
                     <li>Git & Git Hub</li>
-                    <li>Scrum & Kanban</li>
+                    
                 </ul>
             </section>
             <section class="skillbox">
