updated projects page, postgres = completed, API webserver to 'work in progress'

--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,10 @@
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Application</a>
             </section>
             <section class="projects">
-                <h2>SQL Databases</h2>
+                <h2>PostreSQL Database</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
                 <p>Build an SQL database system using PostgreSQL.</p>
-                <a class="button">Work in Progress</a>
+                <a class="button">Completed</a>
             </section>
             <section class="projects">
                 <h2>CS Fundamentals</h2>
@@ -55,7 +55,7 @@
                 <h2>API Webserver</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
                 <p>Build an API Webserver.</p>
-                <a class="button">COMING SOON</a>
+                <a class="button">Work in Progress</a>
             </section>
             <section class="projects">
                 <h2>Full Stack Application</h2>
