--- a/projects.html
+++ b/projects.html
@@ -31,41 +31,42 @@
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>Build a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Website</a>
-                <p>Grade: 63.5/66 HD</p>
+                <p>63.5/66 HD</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
                 <p>Build a terminal application using Python and Bash scripting.</p>
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Application</a>
-                <p>Grade: 94/96 HD</p>
+                <p>94/96 HD</p>
             </section>
             <section class="projects">
-                <h2>PostreSQL Database</h2>
+                <h2>Cumputer Science Fundamentals</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
-                <p>Build an SQL database system using PostgreSQL.</p>
+                <p>Written works.</p>
                 <a class="button">Completed</a>
+                <p>213/240 HD</p>
             </section>
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
                 <p>CS algorithmn fundamentals and discrete mathematics.</p>
                 <a class="button">Complete</a>
-                <p>Grade: 91/100 HD</p>
+                <p>91/100 HD</p>
             </section>
             <section class="projects">
                 <h2>API Webserver</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
-                <p>Build an API Webserver.</p>
+                <p>Build an API Webserver using Python, Flask and PostgreSQL.</p>
                 <a class="button">Work in Progress</a>
-                <p>Grade: </p>
+                <p>/84</p>
             </section>
             <section class="projects">
                 <h2>Full Stack Application</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
                 <p>Build a full-stack web application.</p>
                 <a class="button">Work in Progress</a>
-                <p>Grade: </p>
+                <p> /120</p>
             </section>
         </section>
     </main>
