changed full stack project info

--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
             <section class="projects">
                 <h2>Full Stack Application</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
-                <p>Build a full-stack web application.</p>
+                <p>Build a full-stack web application using JavaScript, REACT and MongoDB.</p>
                 <a class="button">Work in Progress</a>
                 <p> /120</p>
             </section>
