updated about me education order

--- a/about.html
+++ b/about.html
@@ -34,11 +34,13 @@
     </section>
     <section class="education">
         <ul >
-            <li><strong>Coder Academy Full-Stack Development Bootcamp and Higher Education Diploma of IT</strong> at the <em>Academy of Interactive Technology.</em></li>
-            <li><strong>Bachelor of Management (Marketing)</strong> at <em>The University of South Australia.</em></li>
+            <li><strong>Full-Stack Development Intensive Bootcamp</strong> at <em>Coder Academy.</em></li>
+            <li><strong>Higher Education Diploma of Information Technology</strong> at the <em>Academy of Interactive Technology.</em></li>
             <li><strong>Meta Front-End Developer Professional Certificate</strong> at <em>Meta.</em></li>
+            <li><strong>Diploma of Visual Design</strong> at <em>Adelaide College of the Arts.</em></li>           
             <li><strong>Graphic Design Bootcamp</strong> at <em>The Graphic Design School.</em></li>
-            <li><strong>Diploma of Visual Design</strong> at <em>Adelaide College of the Arts.</em></li>
+            <li><strong>Bachelor of Management (Marketing)</strong> at <em>The University of South Australia.</em></li>
+            
         </ul>
     </secton>
     </main>
