--- a/projects.html
+++ b/projects.html
@@ -43,14 +43,14 @@
             <section class="projects">
                 <h2>Cumputer Science Fundamentals</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
-                <p>Written works.</p>
+                <p>Written project works.</p>
                 <a class="button">Completed</a>
                 <p>213/240 HD</p>
             </section>
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
-                <p>CS algorithmn fundamentals and discrete mathematics.</p>
+                <p>CS algorithmn fundamentals and discrete mathematics tests and final exam.</p>
                 <a class="button">Complete</a>
                 <p>91/100 HD</p>
             </section>
@@ -64,7 +64,7 @@
             <section class="projects">
                 <h2>Full Stack Application</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
-                <p>Build a full-stack web application using JavaScript, REACT and MongoDB.</p>
+                <p>Build a full-stack web application using JavaScript, REACT, Express and MongoDB.</p>
                 <a class="button">Work in Progress</a>
                 <p> /120</p>
             </section>
