added written assesssments

--- a/projects.html
+++ b/projects.html
@@ -41,11 +41,16 @@
                 <p>94/96 HD</p>
             </section>
             <section class="projects">
-                <h2>Cumputer Science Fundamentals</h2>
+                <h2>Written Assessments</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
-                <p>Written project works.</p>
+                <li>Web Development</li>
+                <li>Fundamental Programming</li>
+                <li>The IT Professional</li>
+                <li>Applied Computation</li>
+                <li>Principles of Information Systems</li>
+                <li>Database Design and Development</li>
                 <a class="button">Completed</a>
-                <p>213/240 HD</p>
+                <p>218/240 HD</p>
             </section>
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
