added three written assessment topics

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <section class="projects">
                 <h2>Written Assessments</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
-                
+                <p>Applied Computation, Principles of Information Systems, Database Design and Development.</p>
                 <a class="button">Completed</a>
                 <p>218/240 HD</p>
             </section>
