edited discrete maths explanation

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
-                <p>CS algorithmn fundamentals and discrete mathematics tests and final exam.</p>
+                <p>Weekly tests and final exam.</p>
                 <a class="button">Complete</a>
                 <p>91/100 HD</p>
             </section>
