updated website ui image

--- a/design.html
+++ b/design.html
@@ -24,15 +24,15 @@
     </header> 
     <main>
         <h1 class="navheading">Design</h1>
-        <img class="designcan" src="images/KimbaAI_macbook_UI.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
-        <p class="description"><em>Mock Website Interface</em></p>
+        <img class="designcan" src="images/KimbaAi2.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
+        <p class="description"><em>Website UI design</em></p>
         <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
         <!-- <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Picture Berlin Atonal mock design picture 2" width="30%"> -->
-        <p class="description"><em>Mock event poster</em></p>
+        <p class="description"><em>Mock poster design</em></p>
         <img class="designcan" src="images/MJGuavacan-01.png" alt="Picture of Moon Juice beer mock can design" width="20%">
-        <p class="description"><em>Mock logo and product</em></p>
+        <p class="description"><em>Mock logo and product design</em></p>
         <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Pixture of Lazy Days winery mock logo" width="20%">
-        <p class="description"><em>Mock logo</em></p>
+        <p class="description"><em>Mock logo design</em></p>
     <section class="aboutmepara">
         <p>Design has been an integral part of my life since childhood, when my aspirations centered around becoming an architect, spending hours crafting Lego structures and cardboard box arcades and hotels for amusement. This early fascination evolved into a pursuit of product and furniture design, culminating in my year 12 final project—a sneaker design. Since then, I've actively engaged in collaborative projects with various designers, spanning event posters, record designs, clothing, and beyond, further fueling my love for the creative process.
         </p>
