--- a/design.html
+++ b/design.html
@@ -25,7 +25,7 @@
     <main>
         <h1 class="navheading">Design</h1>
         <img class="designcan" src="/images/iphone_graph_UI.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
-        <p class="description"><em>Website UI design</em></p>
+        <p class="description"><em>Mock Mobile UI design</em></p>
         <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
         <!-- <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Picture Berlin Atonal mock design picture 2" width="30%"> -->
         <p class="description"><em>Mock poster design</em></p>
