added macbook UI image:

--- a/design.html
+++ b/design.html
@@ -24,6 +24,7 @@
     </header> 
     <main>
         <h1 class="navheading">Design</h1>
+        <img class="lazydays" src="images/Macbook_graphsUI.png" alt="Pixture of Lazy Days winery mock logo" width="20%">
         <img class="designcan" src="/images/iphone_graph_UI.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
         <p class="description"><em>Mock Mobile UI design</em></p>
         <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
