added wireframes design image

--- a/design.html
+++ b/design.html
@@ -27,6 +27,8 @@
         <img class="lazydays" src="images/Macbook_graphsUI.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%">
         <img class="designcan" src="images/iphone5.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
         <p class="description"><em>Mock Graph App for iPhone & MacBook UI design</em></p>
+        <img class="designcan" src="images/Vibewireframes.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
+        <p class="description"><em>Mock Graph App for iPhone & MacBook UI design</em></p>
         <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
         <!-- <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Picture Berlin Atonal mock design picture 2" width="30%"> -->
         <p class="description"><em>Mock poster design</em></p>
