--- a/design.html
+++ b/design.html
@@ -27,7 +27,9 @@
         <img class="designcan" src="images/iphone5.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
         <img class="lazydays" src="images/Macbook_graphsUI.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%">
         <img class="lazydays" src="images/macbook_graph_ui.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%">
-        <p class="description"><em>Graph App UI for iPhone & MacBook Design</em></p>
+        <p class="description"><em>Graph App UI for iPhone 15 & MacBook Pro</em></p>
+        <img class="designimages" src="images/vibe_wireframes_square.png" alt="Picture of Vibe wireframes on macbook" width="20%">
+        <p class="description"><em>Vibe Clothing Interactive Wireframes for iPhone 15</em></p>
         <!-- <img class="designcan" src="images/Vibewireframes.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
         <p class="description"><em>Mock Graph App for iPhone & MacBook UI design</em></p> -->
         <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
