removed macbook pro ui image

--- a/design.html
+++ b/design.html
@@ -26,8 +26,8 @@
         <h1 class="navheading">Visual Design</h1>
         <img class="designcan" src="images/iphone5.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
         <img class="lazydays" src="images/Macbook_graphsUI.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%">
-        <img class="lazydays" src="images/macbook_graph_ui.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%">
-        <p class="description"><em>Graph App UI for iPhone 15 & MacBook Pro</em></p>
+        <!-- <img class="lazydays" src="images/macbook_graph_ui.png" alt="Picture of gild holding macbook pro with mobile graph UI" width="20%"> -->
+        <p class="description"><em>Graph App UI for iPhone 15</em></p>
         <img class="designimages" src="images/vibe_wireframes_square.png" alt="Picture of Vibe wireframes on macbook" width="20%">
         <p class="description"><em>Vibe Clothing Interactive Wireframes for iPhone 15</em></p>
         <!-- <img class="designcan" src="images/Vibewireframes.png" alt="Picture of hand holding an iphone with a graph UI" width="30%">
