edited project descriptions

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,20 @@
                 <p>94/96 HD</p>
             </section>
             <section class="projects">
+                <h2>RESTful API</h2>
+                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
+                <p>Build a RESTful API web server using Python, Flask, and PostgreSQL, with user information authorized by JWT and hashed with Bcrypt.</p>
+                <a class="button">Work in Progress</a>
+                <p>/84</p>
+            </section>
+            <section class="projects">
+                <h2>Full Stack Application</h2>
+                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
+                <p>Plan, design and build a Full-Stack web application using MongoDB, Express, REACT and Node.js.</p>
+                <a class="button">Work in Progress</a>
+                <p> /120</p>
+            </section>
+            <section class="projects">
                 <h2>Written Assessments</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
                 <p>Applied Computation, Principles of Information Systems, Database Design and Development.</p>
@@ -53,20 +67,6 @@
                 <p>Weekly tests and final exam.</p>
                 <a class="button">Complete</a>
                 <p>91/100 HD</p>
-            </section>
-            <section class="projects">
-                <h2>API Webserver</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
-                <p>Build an API Webserver using Python, Flask and PostgreSQL.</p>
-                <a class="button">Work in Progress</a>
-                <p>/84</p>
-            </section>
-            <section class="projects">
-                <h2>Full Stack Application</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
-                <p>Plan, design and build a full-stack web application using JavaScript, REACT, Express and MongoDB.</p>
-                <a class="button">Work in Progress</a>
-                <p> /120</p>
             </section>
         </section>
     </main>
