updated projects info

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <section class="projects">
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
-                <p>Build a RESTful API web server using Python, Flask, and PostgreSQL, with user information authorized by JWT and hashed with Bcrypt.</p>
+                <p>Build a RESTful API web server using Python, Flask, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
                 <a class="button">Work in Progress</a>
                 <p>/84</p>
             </section>
@@ -64,7 +64,7 @@
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
-                <p>Weekly tests and final exam.</p>
+                <p>Bases, Boolean Logic, Sets, Big O, Matrices, Graphs, Functions & Relations.</p>
                 <a class="button">Complete</a>
                 <p>91/100 HD</p>
             </section>
