changed project buttons to view repository

--- a/projects.html
+++ b/projects.html
@@ -30,14 +30,14 @@
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>Build a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
-                <a class="button" href="https://tommartinportfolio.netlify.app/">View Website</a>
+                <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
                 <p>63.5/66 HD</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
                 <p>Build a terminal application using Python and Bash scripting.</p>
-                <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Application</a>
+                <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
                 <p>94/96 HD</p>
             </section>
             <section class="projects">
